--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ nav {
 }
 
 .header_title {
-    margin: 50px 0 100px 120px;
+    margin: 50px 0 100px 85px;
 }
 
 nav ul {
@@ -112,6 +112,10 @@ nav ul li {
     margin-bottom: 24px;
 }
 
+.word_color {
+    color: #FF900E;
+}
+
 .feature_intro_descripiton {
     margin-bottom: 32px;
 }
@@ -153,7 +157,8 @@ nav ul li {
 .feature_list_info {
     padding: 30px 42px 30px 30px;
     margin-bottom: 15px;
-    box-shadow: 0.1px 0.1px 2px #888888;
+    box-shadow: 0.1px 0.1px 1px #888888;
+    border-radius: 8px;
 }
 
 .feature_details_image {
@@ -161,10 +166,11 @@ nav ul li {
 }
 
 /* ----> extra button */
-.move_button{
+.move_button {
     text-align: center;
     margin-top: -180px;
 }
+
 .extra_button {
     background-color: #FF900E;
     border-radius: 8px;
@@ -183,4 +189,106 @@ nav ul li {
 .extra_button .button_info p {
     font-weight: 500;
     font-size: 25px;
+}
+
+/* ----> some fact section styles <----- */
+.some_fact {
+    margin: 130px 0 100px 85px;
+}
+
+.some_fact_title {
+    margin-bottom: 24px;
+}
+
+/* ----> stat section styles */
+
+.stat {
+    display: flex;
+    justify-content: center;
+    gap: 75px;
+    margin-bottom: 150px;
+}
+
+.stat_info {
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    padding: 40px;
+    text-align: center;
+    transition: transform 1s;
+}
+
+/* 
+------------------
+  animation part
+------------------
+ */
+.stat_info:hover {
+    transform: rotate(45deg);
+    background-color: rgb(188, 220, 231);
+    filter: drop-shadow(10px 10px 10px #1f1f21);
+}
+
+/* ----> sponsor section styles <---- */
+
+.sponsor_info {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.sponsor_title {
+    margin-bottom: 24px;
+}
+
+.sponsors {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.sponsor .sponsors img {
+    filter: grayscale(100%);
+}
+
+
+/* ------->>>> extra section <<<<------- */
+
+.personal_section{
+    width: 100%;
+    max-width: 1200px;
+    background-color: #b8ab7f;
+    border-radius: 8px;
+    margin: 0 auto;
+}
+.personal_section_info{
+    text-align: center;
+    margin-top: 80px;
+}
+.personal_section_title , .personal_section_descripion, .personal_section_title2{
+    margin-bottom: 24px;
+}
+.personal_section_title{
+    padding: 10px;
+}
+.roadmap{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    
+}
+
+
+/* ----> footer styles <---- */
+
+.footer_container{
+    width: 100%;
+    max-width: 1200px;
+    margin: 130px auto;
+}
+
+.footer_description {
+    background-color: #FFF4E7;
+    font-weight: 430;
+    font-size: 18px;
+    color: #424242;
+    padding: 38px 300px;
+    border-radius: 8px;
 }
