--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,8 @@ body {
 
 nav {
     display: flex;
+    width: 100%;
+    max-width: 100%;
     justify-content: space-between;
 
 }
@@ -58,6 +60,7 @@ nav ul {
     display: flex;
     list-style: none;
     margin: 63px 120px 100px 0;
+    flex-wrap: wrap;
 }
 
 nav ul li {
@@ -251,34 +254,39 @@ nav ul li {
 
 /* ------->>>> extra section <<<<------- */
 
-.personal_section{
+.personal_section {
     width: 100%;
     max-width: 1200px;
     background-color: #b8ab7f;
     border-radius: 8px;
     margin: 0 auto;
 }
-.personal_section_info{
+
+.personal_section_info {
     text-align: center;
     margin-top: 80px;
 }
-.personal_section_title , .personal_section_descripion, .personal_section_title2{
+
+.personal_section_title,
+.personal_section_descripion,
+.personal_section_title2 {
     margin-bottom: 24px;
 }
-.personal_section_title{
+
+.personal_section_title {
     padding: 10px;
 }
-.roadmap{
+
+.roadmap {
     display: flex;
     justify-content: center;
     gap: 15px;
-    
 }
 
 
 /* ----> footer styles <---- */
 
-.footer_container{
+.footer_container {
     width: 100%;
     max-width: 1200px;
     margin: 130px auto;
@@ -289,50 +297,100 @@ nav ul li {
     font-weight: 430;
     font-size: 18px;
     color: #424242;
-    padding: 38px 300px;
     border-radius: 8px;
+    text-align: center;
+    padding: 30px 0 30px 0;
 }
 
 
 /* ------> media queries <------ */
 
-@media only screen and (max-width:576px) {
-    .header_container,.some_fact, .stat, .sponsor{
+@media only screen and (max-width: 576px) {
+
+    .feature,
+    .some_fact {
         width: 100%;
     }
+
     nav {
         flex-direction: column;
-    
     }
-    .feature{
+
+    nav ul {
+        width: 100%;
+    }
+
+    .feature_details_image {
+        width: 100%;
+    }
+
+    .feature .feature_image img {
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .feature {
         flex-direction: column;
     }
+
     .feature_image {
         grid-template-columns: repeat(1, 1fr);
+        margin: 0;
+    }
+
+    .feature_intro {
+        margin: 0 auto;
     }
 
     .feature_details {
         flex-direction: column-reverse;
     }
+
+    .feature_details_image img {
+        width: 100%;
+        overflow: hidden;
+    }
+
     .move_button {
         width: 100%;
         margin: 10px;
     }
+
+    .some_fact {
+        margin-left: 25px;
+    }
+
     .stat {
         flex-direction: column;
     }
 
+    .stat_info {
+        width: 80%;
+        margin: 0 auto;
+    }
+
     .sponsors {
         flex-direction: column;
+        font-size: 10px;
+        gap: 20px;
     }
 
-    .roadmap{
+    .sponsor .sponsors img {
+        width: 80%;
+        height: 80px;
+        margin: 0 auto;
+    }
+
+    .sponsor_description {
+        padding: 5px;
+    }
+
+    .personal_section {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .roadmap {
         flex-wrap: wrap;
     }
-
-    .footer_description {
-        font-weight: 350;
-        font-size: 14px;
-    }
-    
 }
